5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1575_1332.log
== TEST (2019-03-24 16:23:19) 
-- CODE:
a = 5
area = (3*((3*a**2)**0.5))
 
print(round(area, 4))
-- OUTPUT:
25.9808
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:23:38) 
-- CODE:
a = 5
area = (3*((3*a**2)**0.5))/2
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 16:23:45) 
-- CODE:
a = 5
area = (3*((3*a**2)**0.5))/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.214803
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:24:20) 
-- CODE:
a = 5
area = (3*((3*a**2)**0.5))/2
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:25:43) 
-- CODE:
a = 5
area = (3*(75**0.5))/2
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:27:03) 
-- CODE:
a = 5
area = (3*(75**0.5))/2
 
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:27:32) 
-- CODE:
a = 5
area = (3*(75**0.5))/2
 print(area)
-- ERROR:
File "XXXX", line 3
    print(area)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:27:46) 
-- CODE:
a = 5
area = (3*(75**0.5))/2
print(area)
-- OUTPUT:
12.99038105676658
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:28:24) 
-- CODE:
a = 5
area = (3*(75**0.5))/2
print(round(area, 0))
-- OUTPUT:
13.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:28:34) 
-- CODE:
a = 5
area = (3*(75**0.5))/2
print(round(area, 1))
-- OUTPUT:
13.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:28:43) 
-- CODE:
a = 5
area = (3*(75**0.5))/2
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 16:28:50) 
-- CODE:
a = 5
area = (3*(75**0.5))/2
print(round(area, 4))
-- EXECUTION TIME:
0.139032
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 16:29:57) 
-- CODE:
print(12.3456)
-- EXECUTION TIME:
0.208635
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.3456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:02:33) 
-- CODE:
a = 5
aresta = (3((3**0.5)a**2))/2
print(round(aresta, 4))
-- ERROR:
File "XXXX", line 2
    aresta = (3((3**0.5)a**2))/2
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:03:07) 
-- CODE:
a = 5
aresta = (3*((3**0.5)*a**2))/2
print(round(aresta, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:03:11) 
-- CODE:
a = 5
aresta = (3*((3**0.5)*a**2))/2
print(round(aresta, 4))
-- EXECUTION TIME:
0.170693
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
